# pqc-observatory

./: .gitignore  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  sign.yml
data/: manifest-2026-07.json  pqc-adoption-2026-07.json  raw-2026-07.jsonl
probe/: go.mod  probe.go  probe_test.go  source.sha256
src/pqc_observatory/: __init__.py  cli.py  dataset.py  scan.py
targets/: 2026-07.txt
tests/: test_cli.py  test_dataset.py  test_scan.py
