[project]
name = "pqc-observatory"
version = "0.1.0"
description = "Reproducible dataset of post-quantum (ML-KEM hybrid) key exchange adoption in TLS, measured by real handshakes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pqc-observatory = "pqc_observatory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_observatory"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=pqc_observatory --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "mypy>=1.11", "ruff>=0.6"]
